[workspace]
members = [
    "puzzle_01",
    "puzzle_02",
    "puzzle_03",
    "puzzle_04",
    "puzzle_05",
    "puzzle_06",
    "puzzle_07",
    "puzzle_08",
    "puzzle_09",
    "puzzle_10",
    "puzzle_11",
    "puzzle_12",
    "puzzle_13",
    "puzzle_14",
    "puzzle_15",
    "puzzle_16",
    "puzzle_17",
    "puzzle_18",
]